--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/005.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/005.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='004.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='006.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿जलबुब्‍बुदसक्‍कधणुखणरूचिघणसोहमिव थिरं ण हवे ।<br>अहमिंदट्ठाणाहिं, बलदेवप्‍पहुदिपज्‍जाया ॥5॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿अहमिंद्र के पद और बलदेव आदिकी पर्यायें जल के बबूले, इंद्रधनुष्‍य, बिजली और मेघ की शोभा के समान / स्थिर रहने वाली नहीं हैं ॥५॥</div>
   </body>
