--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/006.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/006.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='005.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='007.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿जीवणिबद्धं देहं, खीरोदयमिव विणस्‍सदे सिग्‍घं ।<br>भोगोपभोगकारणदव्‍वं णिच्‍चं कहं होदि ॥6॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जब दूध और पानी की तरह जीव के साथ मिला हुआ शरीर शीघ्र नष्‍ट हो जाता है तब भोगोपभोग का कारणभूत द्रव्‍य -- स्‍त्री आदि परिकर नित्‍य कैसे हो सकता है? ॥६॥</div>
   </body>
