--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/009.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/009.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='008.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='010.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿सग्‍गो हवे हि दुग्‍गं, भिच्‍चा देवा य पहरणं वज्‍जं ।<br>अइरावणो गइंदो, इंदस्‍स ण विज्‍जदे सरणं ॥9॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿स्‍वर्ग ही जिसका किला है, देव सेवक हैं, वज्र शस्‍त्र है और ऐरावत गजराज है उस इंद्रका भी कोई शरण नहीं है—उसे भी मृत्‍यु से बचाने वाला कोई नहीं है ॥९॥</div>
   </body>
