--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/011.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/011.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='010.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='012.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿जाइजरामरणरोगभयदो रक्‍खेदि अप्‍पणो अप्‍पा ।<br>तम्‍हा आदा सरणं, बंधोदयसत्‍तकम्‍मवदिरित्‍तो ॥11॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जिस कारण आत्‍मा ही जन्‍म, जरा, मरण, रोग और भय से आत्‍मा की रक्षा करता है उस कारण बंध उदय और सत्‍तारूप अवस्‍था को प्राप्‍त कर्मों से पृथक् रहनेवाला आत्‍मा ही शरण है - आत्‍मा की निष्‍कर्म अवस्‍था ही उसे जन्‍म जरा आदि से बचाने वाली है ॥११॥</div>
   </body>
