--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/012.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/012.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='011.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='013.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿अरूहा सिद्धायरिया, उवझाया साहु पंचपरमेट्ठी ।<br>ते वि हु चिट्ठदि आदे, तम्‍हा आदा हु मे सरणं ॥12॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿अरहंत, सिद्ध, आचार्य, उपाध्‍याय और साधु ये पाँच परमेष्‍ठी हैं। चूँकि ये परमेष्‍ठी भी आत्‍मा में निवास करते हैं अर्थात् आत्‍मा स्‍वयं पंच परमेष्‍ठीरूप परिणमन करता है इसलिए आत्‍मा ही मेरा शरण है ॥१२॥</div>
   </body>
