--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/016.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/016.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='015.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='017-018.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿एक्‍को करेदि पुण्‍णं, धम्‍मणिमित्‍तेण पत्‍तदाणेण ।<br>मणुवदेवेसु जीवो, तस्‍स फलं भुंजदे एक्‍को ॥16॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿धर्म के निमित्‍त पात्रदान के द्वारा जीव अकेला ही पुण्‍य करता है और मनुष्‍य तथा देवों में अकेला ही उसका फल भोगता है ॥१६॥</div>
   </body>
