--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/017-018.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/017-018.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='016.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='019.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-017-018><span class=incFontSz>+ </span><a href=#index>
 ﻿पात्र के तीन भेदों तथा अपात्र का वर्णन</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿उत्‍तमपत्‍तं भणियं, सम्‍मत्‍तगुणेण संजुदो साहू ।<br>सम्‍मादिट्ठी सावय, मज्झिमपत्‍तो हु विण्‍णेओ ॥17॥<br>णिद्दिट्ठो जिणसमये, अविरदसम्‍मो जहण्‍णपत्‍तो त्ति ।<br>सम्‍मत्‍तरयणरहिओ, अपत्‍तमिदि संपरिक्‍खेज्‍जो ॥18॥</div>
