--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/020.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/020.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='019.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='021.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿एक्‍कोहं णिम्‍ममो सुद्धो, णाणदंसणलक्‍खणो ।<br>सुद्धेयत्‍तमुपादेयमेवं चिंतेइ संजदो ॥20॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿मैं अकेला हूँ, ममत्‍व से रहित हूँ, शुद्ध हूँ तथा ज्ञान-दर्शनरूप लक्षण से युक्‍त हूँ इसलिए शुद्ध एकत्‍वभाव ही उपादेय है—ग्रहण करने के योग्‍य है। इस प्रकार संयमी साधु को सदा विचार करते रहना चाहिए ॥२०॥</div>
   </body>
