--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/022.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/022.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='021.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='023.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿अण्‍णो अण्‍णं सोयदि, मदो वि मम णाहगो त्ति मण्‍णंतो ।<br>अप्‍पाणं ण हु सोयदि, संसारमहण्‍णवे बुड्ढं ॥22॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यह मेरा स्‍वामी था, यह मर गया इस प्रकार मानता हुआ अन्‍य जीव अन्‍य जीव के प्रति शोक करता है परंतु संसाररूपी महासागर में डूबते हुए अपने आपके प्रति शोक नहीं करता ॥२२॥</div>
   </body>
