--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/023.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/023.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='022.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='024.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿अण्‍णं इमं सरीरादिगं पि होज्‍ज बाहिरं दव्‍वं ।<br>णाणं दंसणमादा, एवं चिंतेहि अण्‍णत्‍तं ॥23॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यह जो शरीरादिक बाह्य द्रव्‍य है वह सब मुझसे अन्‍य है, ज्ञान दर्शन ही आत्‍मा है अर्थात् ज्ञान दर्शन ही मेरे हैं। इस प्रकार अन्‍यत्‍व भावना का चिंतन करो ॥२३॥</div>
   </body>
