--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/026.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/026.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='025.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='027.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-026><span class=incFontSz>+ </span><a href=#index>
 ﻿क्षेत्रपरिवर्तन का स्‍वरूप</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿सव्‍वम्हि लोयखेत्‍ते, कमसो तं णत्थि जं ण उप्‍पण्‍णं ।<br>उग्‍गाहणेण बहुसो, परिभमिदो खेत्‍तसंसारे ॥26॥</div>
