--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/029.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/029.html
@@ -44,10 +44,11 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='028.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='030.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-029><span class=incFontSz>+ </span><a href=#index>
 ﻿भावपरिवर्तन का स्‍वरूप </a><span class=decFontSz> -</span></div>
-   <div class=gatha>﻿सव्‍वे पयडिट्ठिदिओ, अणुभागपदेसबंधठाणाणि ।<br>जीवो मिच्‍छत्‍तवसा, भमिदो पुण भावसंसारे ॥29॥</div>
-    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यह जीव अवसर्पिणी और उत्‍सर्पिणी काल की समस्‍त समयावलियों में उत्‍पन्‍न हुआ है तथा मरा है। इस तरह इसने काल संसार में अनेक बार परिभ्रमण किया है ॥२७॥</div>
+   <div class=gatha>﻿सव्‍वे पयडिट्ठिदिओ, अणुभागपदेसबंधठाणाणि ।<br>जीवो मिच्‍छत्‍तवसा, भमिदो पुण भावसंसारे ॥29॥<br></div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>मिथ्यात्व के वशीभूत होकर इस जीव ने सम्पूर्ण कर्मों की प्रकृति,स्थिति, अनुभाग और प्रदेश बंध के स्थानों को अनेक बार प्राप्त कर भाव संसार में भ्रमण किया ॥29॥   </div>
+<div class=paragraph></div>
   </body>
 </html>
