--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/031.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/031.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='030.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='032.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿मम पुत्‍तं मम भज्‍जा, मम धणधण्‍णो त्ति तित्‍वकंखाए ।<br>चइऊण धम्‍मबुद्धिं, पच्‍छा परिपडदि दीहसंसारे ॥31॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो जीव, यह मेरा पुत्र है, यह मेरी स्‍त्री है, यह मेरा धनधान्‍य है इस प्रकार की तीव्र आकांक्षा से धर्मबुद्धि छोड़ता है वह पीछे दीर्घ संसार में पड़ता है ॥३१॥</div>
   </body>
