--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/032.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/032.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='031.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='033.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿मिच्‍छोदयेण जीवो, णिंदंतो जोण्‍हभासियं धम्‍मं ।<br>कुधम्‍मकुलिंगकुतित्‍थं, मण्‍णंतो भमदि संसारे ॥32॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿मिथ्‍यात्व के उदय से यह जीव जिनेंद्र भगवान् के द्वारा कथित धर्म की निंदा करता हुआ तथा कुलिंग और कुतीर्थ को मानता हुआ संसार में भ्रमण करता है ॥३२॥</div>
   </body>
