--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/035.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/035.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='034.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='036.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿णिच्चिदरधादुसत्‍तय, तरूदसवियलिंदिएसु छच्‍चेव ।<br>सुरणिरयतिरियचउरो, चौद्दस मणुए सदसहस्‍सा ॥35॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿नित्‍य निगोद, इतर निगोद, पृथिवीकायिक, जलकायिक, अग्निकायिक और वायुकायिक इन छह प्रकार के जीवों में प्रत्‍येक की सात सात लाख, प्रत्‍येक वनस्‍पतिकायिक की दस लाख, विकलेंद्रियों की छह लाख, देव, नारकी तथा पंचेंद्रिय तिर्यंचों में प्रत्‍येक की चार-चार लाख और मनुष्‍यों की चौदह लाख इस प्रकार सब मिलाकर चौरासी लाख योनियाँ हैं। इनमें संसारी जीव भ्रमण करता है ॥३५॥</div>
   </body>
