--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/037.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/037.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='036.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='038.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿कम्‍मणिमित्‍तं जीवो, हिंडदि संसारघोरकांतारे ।<br>जीवस्‍स ण संसारो, णिच्‍चयणयकम्‍मविम्‍मुक्‍को ॥37॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿कर्मों के निमित्‍त से यह जीव संसाररूपी भयानक वन में भ्रमण करता है, किंतु निश्‍चय नयसे जीव कर्मों से रहित है इसलिए उसका संसार भी नहीं है ॥३७॥</div>
   </body>
