--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/038.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/038.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='037.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='039.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿संसारमदिक्‍कंतो, जीवोवादेयमिति विचिंतेज्‍जो ।<br>संसारदुहक्‍कंतो, जीवो सो हेयमिति विचिंतेज्‍जो ॥38॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿संसार से छुटा हुआ जीव उपादेय है ऐसा विचार करना चाहिए और संसार के दु:खों से आक्रांत जीव छोड़ने योग्‍य हैं ऐसा चिंतन करना चाहिए ॥३८॥</div>
   </body>
