--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/040.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/040.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='039.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='041.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿णिरया हवंति हेट्ठा, मज्‍झे दीवंबुरासयो संखा ।<br>सग्‍गो तिसट्ठिभेओ, एत्‍तो उड्ढो हवे मोक्‍खो ॥40॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿नीचे नरक है, मध्‍य में असंख्‍यात द्वीपसमुद्र हैं ऊपर त्रेसठ भेदों से युक्‍त स्‍वर्ग हैं और इनके ऊपर मोक्ष है ॥४०॥</div>
   </body>
