--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/042.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/042.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='041.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='043.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿असुहेण णिरयतिरियं, सुहउवजोगेण दिविजणरसोक्‍खं ।<br>सुद्धेण लहइ सिद्धिं, एवं लोयं विचिंतिज्‍जो ॥42॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿अशुभोपयोगसे नरक और तिर्यंच गति प्राप्‍त होती है, शुभोपयोग से देव और मनुष्‍यगति का सुख मिलता है और शुद्धोपयोग से जीव मुक्‍ति को प्राप्‍त होता है---इस प्रकार लोक का विचार करना चाहिए ॥४२॥</div>
   </body>
