--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/045.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/045.html
@@ -44,8 +44,8 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='044.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='046.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿रसरूहिरमंसमेदट्ठीमज्‍जसंकुलं पुत्‍तपूयकिमिबहुलं ।<br>दुग्‍गंधमसुचि चम्‍ममयमणिच्‍चमचेयणं पडणं ॥45॥</div>
+    <body>
+    <a href='044.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='046.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿रस रूहिर मंसमेदट्ठी मज्‍जसकुलं मुत्तपूवकिमिबहुलं ।<br>दुग्‍गंधमसुचि चम्‍ममयमणिच्‍चमचेयणं पडणं ॥45॥<br></div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यह शरीर रस, रूधिर, मांस, चर्बी, हड्डी तथा मज्‍जासे युक्‍त है। मूत्र, पीब और कीड़ों से भरा है, दुर्गंधित है, अपवित्र है, चर्ममय है, अनित्‍य है, अचेतन है और पतनशील है---नश्र्वर है ॥४५॥</div>
   </body>
 </html>
