--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/046.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/046.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='045.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='047.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿देहादो वदिरित्‍तो, कम्‍मविरहिओ अणंतसुहणिलयो ।<br>चोक्‍खो हवेइ अप्‍पा, इदि णिच्‍चं भावणं कुज्‍जा ॥46॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿आत्‍मा इस शरीर से भिन्‍न है, कर्मरहित है, अनंत सुखों का भंडार है तथा श्रेष्‍ठ है इस प्रकार निरंतर भावना करनी चाहिए ॥४६॥</div>
   </body>
