--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/052.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/052.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='051.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='053.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿रागो दोसो मोहो, हास्‍सादिणोकसायपरिणामो ।<br>थूलो वा सुहुमो वा, असुहमणो त्ति य जिणा वेंति ॥52॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿राग, द्वेष, मोह तथा हास्‍यादिक नोकषायरूप परिणाम चाहे स्‍थूल हों चाहे सूक्ष्‍म, अशुभ मन है ऐसा जिनेंद्रदेव जानते हैं ॥५२॥</div>
   </body>
