--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/055.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/055.html
@@ -44,8 +44,8 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='054.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='056.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿संसारछेदकारणवयणं सुहवयणमिदि जिणुद्दिट्ठं ।<br>जिणदेवादिसु पुजा, सुहकायं त्ति य हवे चेट्ठा ॥55॥<br></div>
+    <body>
+    <a href='054.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='056.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿संसारछेदकारणवयणं सुहवयणमिदि जिणुद्दिट्ठं ।<br>जिणदेवादिसु पूजा, सुहकायं त्तिय हवे चेट्ठा ॥55॥<br></div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो वचन संसार का छेद करने में कारण है वह शुभ वचन है ऐसा जिनेंद्र भगवान् ने कहा है। तथा जिनेंद्रदेव आदि की पूजारूप जो चेष्‍टा---शरीर की प्रवृत्ति है वह शुभकाय है ॥५५॥ </div>
   </body>
 </html>
