--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/056.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/056.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='055.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='057.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿जम्‍मसमुद्दे बहुदोसवीचिए दु:खजलचराकिण्‍णे ।<br>जीवस्‍स परिब्‍भमणं, कम्‍मासवकारणं होदि ॥56॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿अनेक दोषरूपी तरंगों से युक्‍त तथा दु:खरूपी जलचर जीवों से व्‍याप्‍त संसाररूपी समुद्र में जीवका जो परिभ्रमण होता है वह कर्मास्रव के कारण होता है। अर्थात् कर्मास्रव के कारण ही जीव संसारसमुद्र में परिभ्रमण करता है ॥५६॥</div>
   </body>
