--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/059.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/059.html
@@ -44,8 +44,8 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='058.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='060.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿पारंपज्‍जाएण दु, आसवकिरियाए णत्‍थि णिव्‍वाणं ।<br>संसारगमणकारणमिदि णिंदं आसदो जाण ॥59॥</div>
+    <body>
+    <a href='058.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='060.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿पारंपज्‍जाएण दु, आसवकिरियाए णत्‍थि णिव्‍वाणं ।<br>संसारगमणकारणमिदि णिंदं आसवो जाण ॥59॥<br></div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿परंपरा से भी आस्रवरूप क्रिया के द्वारा निर्वाण नहीं होता। आस्रव संसारगमन का ही कारण है। इसलिए निंदनीय है ऐसा जानो ॥५९॥</div>
   </body>
 </html>
