--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/060.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/060.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='059.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='061.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿पुव्‍वुत्‍तासवभेदा, णिच्‍छयणयएण णत्‍थि जीवस्‍स ।<br>उहयासवणिम्‍मुक्‍कं, अप्‍पाणं चिंतए णिच्‍चं ॥60॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿पहले जो आस्रव के भेद कहे गये हैं वे निश्‍चयनय से जीव के नहीं हैं, इसलिए आत्‍मा को दोनों प्रकार के आस्रवों से रहित ही निरंतर विचारना चाहिए ॥६०॥</div>
   </body>
