--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/062.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/062.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='061.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='063.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿पंचमहव्‍वयमणसा, अविरमणणिरोहणं हवे णियमा ।<br>कोहादि आसवाणं, दाराणि कसायरहियपल्‍लगेहि ॥62॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿पंचमहाव्रतों से युक्‍त मनसे अविरतिरूप आस्रवका निरोध नियम से हो जाता है और क्रोधादि कषायरूप आस्रवों के द्वार कषायके अभावरूप फाटकों से रूक जाते हैं ॥६२॥</div>
   </body>
