--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/064.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/064.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='063.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='065.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿सुद्धुवजोगेण पुणो, धम्‍मं सुक्‍कं च होदि जीवस्‍स ।<br>तम्‍हा संवरहेदू, झाणो त्ति विचिंतए णिच्‍चं ॥64॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿शुद्धोपयोग से जीव के धर्म्‍यध्‍यान और शुक्‍लध्‍यान होते हैं, इसलिए ध्‍यान संवरका कारण है ऐसा निरंतर विचार करना चाहिए ॥६४॥</div>
   </body>
