--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/066.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/066.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='065.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='067.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿बंधपदेसग्‍गलणं, णिज्‍जरणं इदि जिणेहि पण्‍णत्‍तं ।<br>जेण हवे संवरणं, तेण दु णिज्‍जरण‍मिति जाण ॥66॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿बँधे हुए कर्मों का गलना निर्जरा है ऐसा जिनेंद्र भगवान् ने कहा है। जिस कारण से संवर होता है उसी कारण से निर्जरा होती है ॥६६॥</div>
   </body>
