--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/068.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/068.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='067.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='069.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-068><span class=incFontSz>+ </span><a href=#index>
 ﻿धर्मानुप्रेक्षा का स्वरूप</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿एयारसदसभेयं, धम्‍मं सम्‍मत्‍तपुव्‍वयं भणियं ।<br>सागारणगाराणं, उत्‍तमसुहसंपजुत्‍तेहिं ॥68॥</div>
