--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/070.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/070.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='069.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='071.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿उत्‍तमखममद्दवज्‍जवसच्‍चसउच्‍चं च संजमं चेव ।<br>तवचागमकिंचण्‍हं, बम्‍हा इदि दसविहं होदि ॥70॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿उत्‍तम क्षमा, उत्‍तम मार्दव, उत्‍तम आर्जव, उत्‍त्‍म सत्‍य, उत्‍तम शौच, उत्‍तम संयम, उत्‍तम तप, उत्‍तम त्‍याग, उत्‍तम आकिंचन्‍य और उत्‍तम ब्रह्मचर्य ये मुनिधर्म के दश भेद हैं ॥७०॥</div>
   </body>
