--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/078.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/078.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='077.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='079.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿णिव्‍वेगतियं भावइ, मोहं चइऊण सव्‍वदव्‍वेसु ।<br>जो तस्‍स हवे चागो, इदि भणिदं जिणवरिंदेहिं ॥78॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो समस्‍त द्रव्‍यों के विषय में मोह का त्‍याग कर तीन प्रकार के निर्वेद की भावना करता है उसके त्‍याग धर्म होता है, ऐसा जिनेंद्रदेव ने कहा है ॥७८॥</div>
   </body>
