--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/079.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/079.html
@@ -44,10 +44,10 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='078.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='080.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-079><span class=incFontSz>+ </span><a href=#index>
 ﻿आकिंचन्‍य धर्म का लक्षण</a><span class=decFontSz> -</span></div>
-   <div class=gatha>﻿होऊण य णिस्‍संगो, णियभावं णिग्‍गहित्‍तु सुदुहदं ।<br>णिद्दंदेण दु वट्टदि, अणयारो तस्‍स किंचण्‍हं ॥79॥</div>
+   <div class=gatha>﻿होऊण य णिस्‍संगो, णियभावं णिग्‍गहित्‍तु सुहदुहदं ।<br>णिद्दंदेण दु वहदि, अणयारो तस्‍स अकिंचण्‍हं ॥79॥<br></div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो मुनि नि:संग-निष्‍परिग्रह होकर सुख और दु:ख देने वाले अपने भावों का निग्रह करता हुआ निर्द्वंद्व रहता है अर्थात् किसी इष्‍ट-अनिष्‍ट के विकल्‍प में नहीं पड़ता उसके आकिंचन्‍य धर्म होता है ॥७९॥</div>
   </body>
 </html>
