--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/080.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/080.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='079.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='081.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-080><span class=incFontSz>+ </span><a href=#index>
 ﻿ब्रह्मचर्य धर्म का लक्षण</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿सव्‍वंगं पेच्‍छंतो, इत्‍थीणं तासु मुयदि दुब्‍भावं ।<br>सो बम्‍हचेरभावं, सक्‍कदि खलु दुद्धरं धरिदुं ॥80॥</div>
