--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/081.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/081.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='080.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='082.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿सावयधम्‍मं चत्‍ता, जदिधम्‍मे जो हु वट्टए जीवो ।<br>सो णय वज्‍जदि मोक्‍खं, धम्‍मं इदि चिंतए णिच्‍चं ॥81॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो जीव श्रावक धर्म को छोड़कर मुनिधर्म धारण करता है वह मोक्ष को नहीं छोड़ता है अर्थात् उसे मोक्ष की प्राप्ति होती है इस प्रकार निरंतर धर्म का चिंतन करना चाहिए ॥८१॥</div>
   </body>
