--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/088.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/088.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='087.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='089.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿रत्तिदिवं पडिकमणं, पच्‍चक्‍खाणं समाहि सामइयं ।<br>आलोयणं पकुव्‍वदि, जदि विज्‍जदि अप्‍पणो सत्तिं ॥88॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यदि अपनी शक्ति है तो रातदिन प्रतिक्रमण, प्रत्‍याख्‍यान, समाधि और आलोचना करनी चाहिए ॥८८॥</div>
   </body>
