--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/090.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/090.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='089.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='091.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿किं पलविएण बहुणा, जे सिद्धा णरवरा गये काले ।<br>सिज्झिहदि जेवि भविया, तं जाणह तस्‍स माहप्‍पं ॥90॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿बहुत कहने से क्‍या लाभ है? भूतकाल में जो श्रेष्‍ठ पुरूष सिद्ध हुए हैं और जो भविष्‍यत् काल में सिद्ध होवेंगे उसे अनुप्रेक्षा का महत्‍व जानो ॥९०॥</div>
   </body>
