--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/index.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/index.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='0000_शास्त्र-मंगलाचरण.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿<font color=black>!!<font color=purple> श्रीसर्वज्ञवीतरागाय नम: </font>!!</font><br><br>श्रीमद्‌-भगवत्कुन्दकुन्दाचार्य-देव-प्रणीत<br><br>श्री<br><font style="font-size:120px"> बारसणुपेक्‍खा </font><br><br><span class=bottomContainer align=justify><font color=black>मूल प्राकृत गाथा</font></span><br><br><font size=3 color=blue>आभार : श्रीशजी</font></div>
   </body>
 </html>
