--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/0000_शास्त्र-मंगलाचरण.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/0000_शास्त्र-मंगलाचरण.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='0000_introduction.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='001.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿<font color=black>!!<font color=purple> नम: श्रीसर्वज्ञवीतरागाय </font>!!</font><br><br>ओंकारं बिन्दुसंयुक्तं नित्यं ध्यायन्ति योगिनः <br>कामदं मोक्षदं चैव ॐकाराय नमो नम: ॥1॥<br><br>अविरलशब्दघनौघप्रक्षालितसकलभूतलकलंका <br>मुनिभिरूपासिततीर्था सरस्वती हरतु नो दुरितान् ॥2॥<br><br>अज्ञानतिमिरान्धानां ज्ञानाञ्जनशलाकया <br>चक्षुरुन्मीलितं येन तस्मै श्रीगुरवे नम: ॥3॥<br><br><font color=black>॥ श्रीपरमगुरुवे नम:, परम्पराचार्यगुरुवे नम: ॥</font><br><br><span class=gatharth><p align=justify><font color=darkblue>सकलकलुषविध्वंसकं, श्रेयसां परिवर्धकं, धर्मसम्बन्धकं, भव्यजीवमन: प्रतिबोधकारकं, पुण्यप्रकाशकं, पापप्रणाशकमिदं शास्त्रं श्रीबारसणुपेक्‍खा नामधेयं, अस्य मूलाग्रन्थकर्तार: श्रीसर्वज्ञदेवास्तदुत्तरग्रन्थकर्तार: श्रीगणधरदेवा: प्रतिगणधरदेवास्तेषां वचनानुसारमासाद्य आचार्य श्रीकुन्दकुन्दाचार्यदेव विरचितं, श्रोतार: सावधानतया शृणवन्तु ॥ </font></p></span><br><br><font color=darkGreen>मंगलं भगवान् वीरो मंगलं गौतमो गणी<br>मंगलं कुन्दकुन्दार्यो जैनधर्मोऽस्तु मंगलम्‌ ॥<br>सर्वमंगलमांगल्यं सर्वकल्याणकारकं <br>प्रधानं सर्वधर्माणां जैनं जयतु शासनम्‌ ॥</font><br></div>
   </body>
 </html>
