--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/001.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/001.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='0000_शास्त्र-मंगलाचरण.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='002.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-001><span class=incFontSz>+ </span><a href=#index>
 ﻿मंगलाचरण और प्रतिज्ञावाक्‍य</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿णमिऊण सव्‍वसिद्धे, झाणुत्‍तमखविददीहसंसारे।<br>दस दस दो दो व जिणे, दस दो अणुपेहणं वोच्‍छे ॥1॥</div>
