--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/002.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/002.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='001.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='003.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-002><span class=incFontSz>+ </span><a href=#index>
 ﻿बारह अनुप्रेक्षाओं के नाम</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿अद्धुवमसरणमेगत्‍तमण्‍णसंसारलोगमसुचित्‍तं ।<br>आसवसंवरणिज्‍जर, धम्‍मं बोहिं च चिंतेज्‍जो ॥2॥</div>
