--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/007.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/007.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='006.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='008.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿परमट्ठेण दु आदा, देवासुरमणुवरायविभवेहिं ।<br>वदिरित्‍तो सो अप्‍पा, सस्‍सदमिदि चिंतए णिच्‍चं ॥7॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿परमार्थ से आत्‍मा देव, असुर और नरेंद्रों के वैभवों से भिन्‍न है और वह आत्‍मा शाश्‍वत है ऐसा निरंतर चिंतन करना चाहिए ॥७॥</div>
   </body>
