--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/010.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/010.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='009.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='011.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿णवणिहि चउदहरयणं, हयमत्‍तगइंदचाउरंगबलं ।<br>चक्‍केसस्‍स ण सरणं, पेच्‍छंतो कद्दये काले ॥10॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿नौ निधियाँ, चौदह रत्‍न, घोड़े, मत्‍त हाथी और चतुरंगिणी सेना चक्रवर्ती के लिए शरण नहीं हैं। देखते-देखते काल उसे नष्‍ट कर देता है ॥१०॥</div>
   </body>
