--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/013.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/013.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='012.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='014.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿सम्‍मत्‍तं सण्‍णाणं, सच्‍चारित्‍तं च सत्‍तवो चेव ।<br>चउरो चिट्ठदि आदे, तम्‍हा आदा हु मे सरणं ॥13॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿चूँकि सम्‍यग्‍दर्शन, सम्‍यग्‍ज्ञान, सम्‍यक्‍चारित्र और सम्‍यक् तप ये चारों भी आत्‍मा में स्थित हैं इसलिए आत्‍मा ही मेरा शरण है ॥१३॥</div>
   </body>
