--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/014.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/014.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='013.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='015.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-014><span class=incFontSz>+ </span><a href=#index>
 ﻿एकत्व्वानुप्रेक्षा</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿एक्‍को करेदि कम्‍मं, एक्‍को हिंडदि य दीहसंसारे ।<br>एक्‍को जायदि मरदि य, तस्‍स फलं भुंजदे एक्‍को ॥14॥</div>
