--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/025.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/025.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='024.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='026.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-025><span class=incFontSz>+ </span><a href=#index>
 ﻿द्रव्‍यपरिवर्तन का स्‍वरूप</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿सव्‍वे वि पोग्‍गला खलु, एगे भुत्‍तुज्झिया हि जीवेण ।<br>असयं अणंतखुत्‍तो, पुग्‍गलपरियट्टसंसारे ॥25॥</div>
