--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/041.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/041.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='040.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='042.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-041><span class=incFontSz>+ </span><a href=#index>
 ﻿स्‍वर्ग त्रेसठ भेदों का वर्णन</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿इगतीस सत्‍त चत्‍तारि दोण्णि एक्‍केक्‍क छक्‍क चदुकप्‍पे ।<br>तित्तिय एक्‍केंकेंदियणामा उडुआदि तेसट्ठी ॥41॥</div>
