--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/050.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/050.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='049.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='051.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿असुहेदरभेदेण दु, एक्‍केक्‍कं वण्णिदं हवे दुविहं ।<br>आहारादी सण्‍णा, असुहमणं इदि विजाणेहि ॥50॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿मन वचन काय इन तीनों योगों में से प्रत्‍येक योग अशुभ और शुभ के भेद से दो प्रकार का कहा गया है। आहार आदि संज्ञाओं का होना अशुभ मन है ऐसा जानो ॥५०॥</div>
   </body>
