--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/053.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/053.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='052.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='054.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿भत्थित्‍थिरायचोरकहाओ वयणं वियाण असुहमिदि ।<br>बंधणछेदणमारणकिरिया सा असुहकायेत्ति ॥53॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿भक्‍तकथा, स्‍त्रीकथा राजकथा और चोरकथा अशुभ वचन है ऐसा जानो। तथा बंधन, छेदन और मारणरूप जो क्रिया है वह अशुभ काय है ॥५३॥</div>
   </body>
