--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/054.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/054.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='053.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='055.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿मोत्‍तूण असुहभावं, पुव्‍वुत्‍तं णिरवसेसदो दव्‍वं ।<br>वदसमिदिसीलसंजमपरिणामं सुहमणं जाणे ॥54॥<br></div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿पहले कहे हुए अशुभ भाव तथा अशुभ द्रव्‍य को व्रत, समिति, शील और संयमरूप परिणामों का होना शुभ मन है ऐसा जानों ॥५४॥</div>
   </body>
