--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/058.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/058.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='057.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='059.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿आसवहेदू जीवो, जम्‍मसमुद्दे णिमज्‍जदे खिप्‍पं ।<br>आसवकिरिया तम्‍हा, मोक्‍खणिमित्‍तं ण चिंतेज्‍जो ॥58॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿आस्रव के कारण जीव संसाररूपी समुद्रमें शीघ्र डूब जाता है इसलिए आस्रवरूप क्रिया मोक्ष का निमित्‍त नहीं है ऐसा विचार करना चाहिए ॥५८॥</div>
   </body>
