--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/061.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/061.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='060.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='062.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-061><span class=incFontSz>+ </span><a href=#index>
 ﻿संवरानुप्रेक्षा का स्वरूप</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿चलमलिनमगाढं च, वज्जिय सम्‍मत्‍तदिढकवाडेण ।<br>मिच्‍छत्‍तासवदारणिरोहो होदि त्ति जिणेहि णिद्दिट्ठं ॥61॥<br></div>
