--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/065.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/065.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='064.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='066.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿जीवस्‍स ण संवरणं, परमट्ठणएण सुद्धभावादो ।<br>संवरभावविमुक्‍कं, अप्‍पाणं चिंतए णिच्‍चं ॥65॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿परमार्थ नय---निश्‍चय नयसे जीव के संवर नहीं है क्‍योंकि वह शुद्ध भाव से सहित है। अतएव आत्‍मा को सदा संवरभाव से रहित विचारना चाहिए ॥६५॥</div>
   </body>
