--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/067.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/067.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='066.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='068.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿सा पुण दुविहा णेया, सकालपक्‍का तवेण कयमाणा ।<br>चदुगदियाणं पढमा, वयजुत्‍ताणं हवे बिदिया ॥67॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿फिर वह निर्जरा दो प्रकार की जाननी चाहिए -- एक अपना उदयकाल आनेपर कर्मों का स्‍वयं पककर झड़ जाना और दूसरी तपके द्वारा की जानेवाली। इनमें पहली निर्जरा तो चारों गतियों के जीवों की होती है और दूसरी निर्जरा व्रती जीवों के होती है ॥६७॥</div>
   </body>
