--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/071.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/071.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='070.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='072.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-071><span class=incFontSz>+ </span><a href=#index>
 ﻿उत्‍तम क्षमा का लक्षण</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿कोहुप्‍पत्तिस्‍स पुणो, बहिरंगं जदि हवेदि सक्‍खादं ।<br>ण कुणदि किंचि वि कोहो, तस्‍स खमा होदि धम्‍मो त्ति ॥71॥</div>
