--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/082.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/082.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='081.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='083.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿णिच्‍छयणएण जीवो, सागारणगारधम्‍मदो भिण्‍णो ।<br>मज्‍झत्‍थभावणाए, सुद्धप्‍पं चिंतए णिच्‍चं ॥82॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿निश्‍चयनय से जीव गृहस्‍थधर्म और मुनिधर्म से भिन्‍न है इसलिए दोनों धर्मों में मध्‍यस्‍थ भावना रखते हुए निरंतर शुद्ध आत्‍मा का चिंतन करना चाहिए ॥८२॥</div>
   </body>
