--- a/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/083.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/083.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='082.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='084.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-083><span class=incFontSz>+ </span><a href=#index>
 ﻿बोधिदुर्लभ भावना का स्वरूप</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿उप्‍पज्‍जदि सण्‍णाणं, जेण उवाएण तस्‍सुवायस्‍स ।<br>चिंता हवेइ बोहो, अच्‍चंतं दुल्‍लहं होदि ॥83॥</div>
