--- a/jainDataBase/teeka/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/index.html
+++ b/jainDataBase/teeka/02_चरणानुयोग/06_बारसणुपेक्‍खा--कुन्दकुन्दाचार्य/html/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 </head>
-<body oncopy="return false" onpaste="return false" oncut="return false">
+<body>
 <div align=center><a href='../../../../../index.html'><img src='../../../../../images/jain-saint.jpg' height=270 width=300></img><figcaption>Click Here</figcaption></a></div>
 <br><br><br>
 <div class=hdr1 align=center>बारसणुपेक्‍खा</div>
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- कुन्दकुन्दाचार्य</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 17-Nov-2022</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
+<div align=right>Date : 24-Aug-2024</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
   <div class=main>अधिकार</div><br>
     <table align=center width=90% class=adhikarIndex>
       <td><a href='#ad1'>﻿मंगलाचरण</a>
@@ -233,8 +233,9 @@
 <br><div class=title id=gatha-028><span class=incFontSz>+ </span><a href=#index>﻿भवपरिवर्तन का स्‍वरूप </a><span class=decFontSz> -</span></div><div class=gatha>﻿णिरयाउजहण्‍णादिसु, जाव दु उवरिल्‍लया दु गेवेज्‍जा ।<br>मिच्‍छत्‍तसंसिदेण दु, बहुसो वि भवट्ठिदी भमिदो ॥28॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿मिथ्‍यात्‍व के आश्रम से इस जीव ने नरक की जघन्‍य आयु से लेकर उपरिम ग्रैवेयक तक की भवस्थिति को धारण कर अनेक बार भ्रमण किया है ॥२८॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<br><div class=title id=gatha-029><span class=incFontSz>+ </span><a href=#index>﻿भावपरिवर्तन का स्‍वरूप </a><span class=decFontSz> -</span></div><div class=gatha>﻿सव्‍वे पयडिट्ठिदिओ, अणुभागपदेसबंधठाणाणि ।<br>जीवो मिच्‍छत्‍तवसा, भमिदो पुण भावसंसारे ॥29॥</div>
-<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यह जीव अवसर्पिणी और उत्‍सर्पिणी काल की समस्‍त समयावलियों में उत्‍पन्‍न हुआ है तथा मरा है। इस तरह इसने काल संसार में अनेक बार परिभ्रमण किया है ॥२७॥</div><hr class=type_7>
+<br><div class=title id=gatha-029><span class=incFontSz>+ </span><a href=#index>﻿भावपरिवर्तन का स्‍वरूप </a><span class=decFontSz> -</span></div><div class=gatha>﻿सव्‍वे पयडिट्ठिदिओ, अणुभागपदेसबंधठाणाणि ।<br>जीवो मिच्‍छत्‍तवसा, भमिदो पुण भावसंसारे ॥29॥<br></div>
+<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>मिथ्यात्व के वशीभूत होकर इस जीव ने सम्पूर्ण कर्मों की प्रकृति,स्थिति, अनुभाग और प्रदेश बंध के स्थानों को अनेक बार प्राप्त कर भाव संसार में भ्रमण किया ॥29॥   </div>
+<div class=paragraph></div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <div class=gatha>﻿पुत्‍तकलत्‍तणिमित्‍तं, अत्‍थं अज्‍जयदि पापबुद्धीए ।<br>परिहरदि दयादाणं, सो जीवो भमदि संसारे ॥30॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो जीव पुत्र तथा स्‍त्री के निमित्‍त पापबुद्धि से धन कमाता है और दयादान का परित्‍याग करता है वह संसार में भ्रमण करता है ॥३०॥</div><hr class=type_7>
@@ -283,7 +284,7 @@
 <div class=gatha>﻿दुग्‍गंध बीभच्‍छं, कलिमलभरिंद अचेयणं मुत्‍तं ।<br>सडणप्‍पडणसहावं, देहं इदि चिंतए णिच्‍चं ॥44॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यह शरीर दुर्गंध से युक्‍त‍ है, घृणित है, गंदे मल से भरा हुआ है, अचेतन है, मूर्तिक है तथा सड़ना और गलना स्‍वभाव से सहित है ऐसा सदा चिंतन करना चाहिए ॥४४॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<div class=gatha>﻿रसरूहिरमंसमेदट्ठीमज्‍जसंकुलं पुत्‍तपूयकिमिबहुलं ।<br>दुग्‍गंधमसुचि चम्‍ममयमणिच्‍चमचेयणं पडणं ॥45॥</div>
+<div class=gatha>﻿रस रूहिर मंसमेदट्ठी मज्‍जसकुलं मुत्तपूवकिमिबहुलं ।<br>दुग्‍गंधमसुचि चम्‍ममयमणिच्‍चमचेयणं पडणं ॥45॥<br></div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿यह शरीर रस, रूधिर, मांस, चर्बी, हड्डी तथा मज्‍जासे युक्‍त है। मूत्र, पीब और कीड़ों से भरा है, दुर्गंधित है, अपवित्र है, चर्ममय है, अनित्‍य है, अचेतन है और पतनशील है---नश्र्वर है ॥४५॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <div class=gatha>﻿देहादो वदिरित्‍तो, कम्‍मविरहिओ अणंतसुहणिलयो ।<br>चोक्‍खो हवेइ अप्‍पा, इदि णिच्‍चं भावणं कुज्‍जा ॥46॥</div>
@@ -314,7 +315,7 @@
 <div class=gatha>﻿मोत्‍तूण असुहभावं, पुव्‍वुत्‍तं णिरवसेसदो दव्‍वं ।<br>वदसमिदिसीलसंजमपरिणामं सुहमणं जाणे ॥54॥<br></div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿पहले कहे हुए अशुभ भाव तथा अशुभ द्रव्‍य को व्रत, समिति, शील और संयमरूप परिणामों का होना शुभ मन है ऐसा जानों ॥५४॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<div class=gatha>﻿संसारछेदकारणवयणं सुहवयणमिदि जिणुद्दिट्ठं ।<br>जिणदेवादिसु पुजा, सुहकायं त्ति य हवे चेट्ठा ॥55॥<br></div>
+<div class=gatha>﻿संसारछेदकारणवयणं सुहवयणमिदि जिणुद्दिट्ठं ।<br>जिणदेवादिसु पूजा, सुहकायं त्तिय हवे चेट्ठा ॥55॥<br></div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो वचन संसार का छेद करने में कारण है वह शुभ वचन है ऐसा जिनेंद्र भगवान् ने कहा है। तथा जिनेंद्रदेव आदि की पूजारूप जो चेष्‍टा---शरीर की प्रवृत्ति है वह शुभकाय है ॥५५॥ </div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <div class=gatha>﻿जम्‍मसमुद्दे बहुदोसवीचिए दु:खजलचराकिण्‍णे ।<br>जीवस्‍स परिब्‍भमणं, कम्‍मासवकारणं होदि ॥56॥</div>
@@ -326,7 +327,7 @@
 <div class=gatha>﻿आसवहेदू जीवो, जम्‍मसमुद्दे णिमज्‍जदे खिप्‍पं ।<br>आसवकिरिया तम्‍हा, मोक्‍खणिमित्‍तं ण चिंतेज्‍जो ॥58॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿आस्रव के कारण जीव संसाररूपी समुद्रमें शीघ्र डूब जाता है इसलिए आस्रवरूप क्रिया मोक्ष का निमित्‍त नहीं है ऐसा विचार करना चाहिए ॥५८॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<div class=gatha>﻿पारंपज्‍जाएण दु, आसवकिरियाए णत्‍थि णिव्‍वाणं ।<br>संसारगमणकारणमिदि णिंदं आसदो जाण ॥59॥</div>
+<div class=gatha>﻿पारंपज्‍जाएण दु, आसवकिरियाए णत्‍थि णिव्‍वाणं ।<br>संसारगमणकारणमिदि णिंदं आसवो जाण ॥59॥<br></div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿परंपरा से भी आस्रवरूप क्रिया के द्वारा निर्वाण नहीं होता। आस्रव संसारगमन का ही कारण है। इसलिए निंदनीय है ऐसा जानो ॥५९॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <div class=gatha>﻿पुव्‍वुत्‍तासवभेदा, णिच्‍छयणयएण णत्‍थि जीवस्‍स ।<br>उहयासवणिम्‍मुक्‍कं, अप्‍पाणं चिंतए णिच्‍चं ॥60॥</div>
@@ -388,7 +389,7 @@
 <div class=gatha>﻿णिव्‍वेगतियं भावइ, मोहं चइऊण सव्‍वदव्‍वेसु ।<br>जो तस्‍स हवे चागो, इदि भणिदं जिणवरिंदेहिं ॥78॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो समस्‍त द्रव्‍यों के विषय में मोह का त्‍याग कर तीन प्रकार के निर्वेद की भावना करता है उसके त्‍याग धर्म होता है, ऐसा जिनेंद्रदेव ने कहा है ॥७८॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<br><div class=title id=gatha-079><span class=incFontSz>+ </span><a href=#index>﻿आकिंचन्‍य धर्म का लक्षण</a><span class=decFontSz> -</span></div><div class=gatha>﻿होऊण य णिस्‍संगो, णियभावं णिग्‍गहित्‍तु सुदुहदं ।<br>णिद्दंदेण दु वट्टदि, अणयारो तस्‍स किंचण्‍हं ॥79॥</div>
+<br><div class=title id=gatha-079><span class=incFontSz>+ </span><a href=#index>﻿आकिंचन्‍य धर्म का लक्षण</a><span class=decFontSz> -</span></div><div class=gatha>﻿होऊण य णिस्‍संगो, णियभावं णिग्‍गहित्‍तु सुहदुहदं ।<br>णिद्दंदेण दु वहदि, अणयारो तस्‍स अकिंचण्‍हं ॥79॥<br></div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो मुनि नि:संग-निष्‍परिग्रह होकर सुख और दु:ख देने वाले अपने भावों का निग्रह करता हुआ निर्द्वंद्व रहता है अर्थात् किसी इष्‍ट-अनिष्‍ट के विकल्‍प में नहीं पड़ता उसके आकिंचन्‍य धर्म होता है ॥७९॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><div class=title id=gatha-080><span class=incFontSz>+ </span><a href=#index>﻿ब्रह्मचर्य धर्म का लक्षण</a><span class=decFontSz> -</span></div><div class=gatha>﻿सव्‍वंगं पेच्‍छंतो, इत्‍थीणं तासु मुयदि दुब्‍भावं ।<br>सो बम्‍हचेरभावं, सक्‍कदि खलु दुद्धरं धरिदुं ॥80॥</div>
